--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,6 @@
         }
     ],
     "require": {
-        "phpunit/phpunit": "^9.4",
-        "squizlabs/php_codesniffer": " 3.*"
     },
     "autoload": {
         "psr-4": {
@@ -23,6 +21,8 @@
         }
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.16"
+        "friendsofphp/php-cs-fixer": "^2.16",
+        "phpunit/phpunit": "^9.4",
+        "squizlabs/php_codesniffer": " 3.*"
     }
 }
