--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
-        "phpunit/phpunit": "^9.4",
-        "squizlabs/php_codesniffer": " 3.*"
+        "squizlabs/php_codesniffer": "^3.5",
+        "phpunit/phpunit": "^9.4"
     }
 }
